fix: remove scrollbar (#18)

--- a/components/Filter/Filter.module.css
+++ b/components/Filter/Filter.module.css
@@ -5,15 +5,13 @@
     display: flex;
     flex-direction: column;
     background-color: black;
-    padding: 20px;
+    padding: 20px 4px 20px 20px;
     border-radius: 5px;
     box-shadow: rgb(0 0 0 / 10%) 0px 10px 15px -3px, rgb(0 0 0 / 5%) 0px 4px 6px -2px;
     width: 100%;
     max-width: 270px;
     z-index: 999;
     max-height: 80vh;
-    overflow-x: hidden;
-    overflow-y: auto;
 }
 
 .filter__arrow {
@@ -56,8 +54,8 @@
 .filter__list {
     overflow: auto;
     transition: all .3s ease;
+    padding-right: 16px;
 }
-
 
 @media screen and (max-width: 768px) {
     .filter {
